# CUDA1

./: CMakeLists.txt  CMakeSettings.json  README.md  instrukcja.txt
ElectronsAndProtons_CPU/: ElectronsAndProtons_CPU.vcxproj  main.cpp
ElectronsAndProtons_CPU/bak/: ElectronsAndProtons_CPU.vcxproj
ElectronsAndProtons_CUDA/: cuda_buffer.cuh  gpu_particles_handle_t.h  main.cu  random_fill.cuh
include/: i2xy_t.h  particles_t.h
shared/include/: constants.h  i2xy_t.h  particles_t.h
shared/src/: particles_t.cpp
